--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "eFood": {
+    "vehicle-streaming": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/eFood",
+            "outputPath": "dist/vehicle-streaming",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/ol/ol.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -66,18 +68,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "eFood:build"
+            "browserTarget": "vehicle-streaming:build",
+            "proxyConfig": "proxy/proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "eFood:build:production"
+              "browserTarget": "vehicle-streaming:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "eFood:build"
+            "browserTarget": "vehicle-streaming:build"
           }
         },
         "test": {
@@ -92,6 +95,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/ol/ol.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -114,15 +119,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "eFood:serve"
+            "devServerTarget": "vehicle-streaming:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "eFood:serve:production"
+              "devServerTarget": "vehicle-streaming:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "eFood"
+    }
+  },
+  "defaultProject": "vehicle-streaming"
 }
