--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,6 +30,7 @@
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/ol/ol.css",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -97,6 +98,7 @@
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/ol/ol.css",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
